chore(release): 0.3.0
Parity pass over the DuckDB JDBC driver surface: connection config, streaming/chunked exec, optional Arrow interop, UDF registration, and typed/metadata accessors.